Fix dark mode

--- a/app/assets/stylesheets/components/autocomplete.css
+++ b/app/assets/stylesheets/components/autocomplete.css
@@ -26,6 +26,7 @@
     &:hover,
     &--active {
       @apply bg-blue-50;
+      @apply dark:bg-blue-900/50;
     }
   }
 }
