--- a/app/assets/stylesheets/components/dropdown.css
+++ b/app/assets/stylesheets/components/dropdown.css
@@ -66,7 +66,6 @@
 
     &[disabled] {
       cursor: default;
-
       @apply bg-transparent text-gray-400;
     }
 
@@ -79,12 +78,9 @@
         @apply dark:text-gray-100;
       }
 
-      &:is(:focus, :focus-visible) {
+      &:is(:hover, :focus, :focus-visible) {
         @apply bg-blue-50;
-      }
-
-      &:hover {
-        @apply bg-blue-50;
+        @apply dark:bg-blue-900/50;
       }
 
       &:active {
